<resources>
    <string name="app_name">Las Esteras</string>
    <string name="username">Username</string>
    <string name="remember">Recuerdame</string>
    <string name="val_empty">El campo no puede estar vacío</string>
    <string name="Incorrect">Usuario o Contraseña incorrectos</string>
    <string name="Internet">No tienes conexión a internet</string>
    <string name="InternetError">No se pudo conectar. Por favor, vuelve a intentarlo</string>
    <string name="toAccept">Volver a cargar</string>
    <string name="leave">Salir</string>
    <string name="enter">Ingresar</string>
    <string name="password">Password</string>
    <string name="table">table 0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="additional">Extras</string>
    <string name="menu">Menú</string>
    <string name="order">Pedido</string>
    <string name="Add_dishes">Añadir platos</string>
    <string name="order_summary">Resumen del Pedido</string>
    <string name="Ordering">Realizar el pedido</string>
    <string name="date">03/09/2021</string>
    <string name="plate">Plato</string>
    <string name="quantity">Cantidad</string>
    <string name="price">Precio</string>
    <string name="s_0_00">S/000.00</string>
    <string name="_0">0</string>
    <string name="drinks">Bebidas</string>
    <string name="save">Guardar</string>
    <string name="select_one_dish">seleccione al menos un plato</string>
    <string name="Empty_order">Pedido vacío</string>
    <string name="tables">Ventas</string>
    <string name="personal">Personal</string>
    <string name="orders">Pedidos</string>
    <string name="letter">Carta</string>
    <string name="tables_l">Mesas</string>
    <string name="collect">Cobrar</string>
    <string name="edit">Editar</string>
    <string name="remove">Eliminar</string>
    <string name="sales_reports">Reporte de Ventas</string>
    <string name="day">Día</string>
    <string name="month">Mes</string>
    <string name="year">Año</string>
    <string name="total_sale">VENTA TOTAL</string>
    <string name="start_date">Fecha de Inicio</string>
    <string name="ending_date">Fecha de Fin</string>
    <string name="reports_consult">CONSULTAR</string>
    <string name="date_text">Fecha</string>
    <string name="sales">Ventas</string>
    <string name="total">Total</string>
    <string name="name">Nombre</string>
    <string name="available_">Disponible</string>
    <string name="existsName">Nombre de Usuario ya registrado</string>
    <string name="existsEmail">E-Mail ya registrado</string>
    <string name="existsCellular">Celular ya registrado</string>
    <string name="delete">Eliminar</string>
    <string name="e_mail">E-Mail</string>
    <string name="full_name">Nombre Completo</string>
    <string name="cellular">Celular</string>
    <string name="username2">Usuario</string>
    <string name="sign_off">Cerrar Sesión</string>
    <string name="role">Rol</string>

</resources>