<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#b2b0b0"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dialog_close_add"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_close_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_add"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price_add"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:hint="@string/price">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/available_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:visibility="gone"
            android:background="@drawable/text_border"
            android:contentDescription="@string/app_name"
            android:drawableStart="@drawable/ic_baseline_check_24"
            android:drawablePadding="15sp"
            android:padding="10dp"
            android:paddingStart="15sp"
            android:text="@string/available_"
            tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/save_item"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/save"
            android:textColor="#fff" />

        <Button
            android:id="@+id/delete_item"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/delete"
            android:textColor="#fff"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>